--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <div class="nav">
             <div class="navwrapper">
-                <div class="logo"></div>
+                <a href="#home"><div class="logo"></div></a>
             <div class="menu">
                 <ul>
                     <li><a href="#home">Home</a></li>
