--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <h1>Support us by become a patron</h1>
             <hr class="solidv2">
             <p>Traversy Media features free quality content via YouTube. Join our Patreon to show your support and gratitude. Even $1 per month means the world. Free Udemy course tiers are also available</p>
-            <button>Become a patron</button>
+            <a href="https://www.patreon.com/traversymedia" target="_blank" rel="noopener noreferrer"><button>Become a patron</button></a>
         </div>
         <div class="PGSBG guest">
             <!-- <div class="PGoverlay"></div> -->
