link to Linkedin

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     <li><a target="_blank" href="https://github.com/bradtraversy"><i class="fab fa-github"></i></a></li>
                 </ul>
             </div>
-            <div class="designer">designed by <a href="https://www.behance.net/vipoodecrut" target="_blank" rel="noopener noreferrer">vipoo chhun</a></div>
+            <div class="designer">designed by <a href="https://www.linkedin.com/in/viphou-chhun-aab64b198/" target="_blank" rel="noopener noreferrer">vipoo chhun</a></div>
         </div>
         <div class="tablet rights">© 2020 TRAVERSY MEDIA. ALL RIGHTS RESERVED.</div>
     </div>
