id scroll margin Negative

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
             <p><Strong>Traversy Media is dedicated to bringing the world the highest quality programming content. Brad creates courses & tutorials, but also features other talented instructors on the channel</Strong></p>
         </div>
     </div>
+    <hr class="solidv3"> 
     <div class="PGS" id="pgs">
         <div class="PGSBG patron">
             <!-- <div class="PGoverlay"></div> -->
@@ -151,7 +152,6 @@
         <h1>Subscribe to our Newsletter</h1>
         <h2>Get Notified When New Courses Release</h2>
         <input type="email" id="email" name="email" placeholder="Enter your email">
-        <!-- <button type="submit" form="nameform"><p>GO</p></button> -->
         <button type="submit" form="email">Subscribe</button>
         <p>***Your email address will never be shared***</p>
             <br>
